--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div id="login-form">
+		
+		<label for="first-name">First Name:</label>
+		<input type="text" id="first-name">
+		<br>
+		<label for="last-name">Last Name:</label>
+		<input type="text" id="last-name">
+		<br>
+		<label for="phone">Phone Number:</label>
+		<input type="text" id="phone">
+		<br>
+		<label for="email">Email ID:</label>
+		<input type="email" id="email">
+		<br>
+		<button type="submit" id="submit" onclick="handleSubmit()">Submit</button>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
