--- a/main.html
+++ b/main.html
@@ -11,17 +11,17 @@
 
 	<div id="login-form">
 		
-		<label for="first-name">First Name:</label>
-		<input type="text" id="first-name">
+		<label for="first-name">First Name</label>
+		<input type="text" id="first-name" name="First Name" required>
 		<br>
-		<label for="last-name">Last Name:</label>
-		<input type="text" id="last-name">
+		<label for="last-name">Last Name</label>
+		<input type="text" id="last-name" name="Last Name" required>
 		<br>
-		<label for="phone">Phone Number:</label>
-		<input type="text" id="phone">
+		<label for="phone">Phone Number</label>
+		<input type="text" id="phone" name="Phone Number" >
 		<br>
-		<label for="email">Email ID:</label>
-		<input type="email" id="email">
+		<label for="email">Email ID</label>
+		<input type="email" id="email" name="Email ID">
 		<br>
 		<button type="submit" id="submit" onclick="handleSubmit()">Submit</button>
 	</div>
