--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<div id="login-form">
+	<div id="form">
 		
 		<label for="first-name">First Name</label>
 		<input type="text" id="first-name" name="First Name" required>
